--- a/scraper/pyproject.toml
+++ b/scraper/pyproject.toml
@@ -8,7 +8,7 @@ authors = [{ name = "Kiwix", email = "dev@kiwix.org" }]
 keywords = ["kiwix", "zim", "offline", "youtube"]
 requires-python = ">=3.10,<3.11"
 description = "Make ZIM file from a Youtube channel, user or playlist(s)"
-readme = "README.md"
+readme = "../README.md"
 license = { text = "GPL-3.0-or-later" }
 classifiers = [
   "Programming Language :: Python :: 3",
